# workspace

./: .bazelrc  .gitignore  .gitmodules  .pylintrc  Makefile  README.md  WORKSPACE  dev_requirements.txt  environment.yml  pants  pants.toml  tox.ini
.build-support/: mypy.ini
.ci-azure/: azure-pipelines.yml  stage-deps.yml  stage-lint.yml  stage-type-check.yml  tasks_py_setup.yml  use_py_deps.yml
.ci-azure/pipelines/: azure-pipelines.yml
.ci-azure/templates/: setup_npm.yml  setup_py.yml  use_py_deps.yml
.ci_azure/: azure-pipelines.yml
.github/workflows/: typilus.yaml
.ini-files/: .bandit.yml  .pylintrc  mypy.ini
algo/bfs/: bfs.py  bfs.q  bfs_.py
app_iqor/: README.md  autogenerated-requirements.txt  database.q  requirements.txt  server.py
app_iqor/static/: all.css  index-tenant.css  (+1 more)
app_paper_plane/: BUILD.bazel  BUILD.pants  README.md  autogenerated-requirements.txt  main.py  pyoxidizer.bzl  pyproject3.toml  requirements.txt  shiv-package.sh
app_paper_plane/static/css/: style-new.css  style-results.css  style-table.css  style.css
app_paper_plane/static/less/: style.less
app_paper_plane/static/scss/: style.scss
app_paper_plane/templates/: index-table.html  index.html  loading-clicked.html  loading.html
build-support/: .flake8  install_make_git_bash.sh  mypy.ini
bzl_setup/: .bazelrc  WORKSPACE
dotfiles/: .bashrc  .vimrc
lib_bzl_utils/: BUILD.bazel  full_deps.py  python.bzl
lib_py_utils/: Makefile  Makefile2  autogenerated-requirements.txt  requirements.txt  setup.py
lib_py_utils/py_utils/: BUILD.bazel  BUILD.pants  functools.py  logging.py  mypy_plugin.py
lib_sh_utils/: commands.sh
resources/: functional-programming.md
scripts/: pre-commit
tutorials_hs/: Makefile
tutorials_hs/h99/: Ex1To10.hs  hunit-example.cabal
tutorials_hs/h99/tests/: TestEx1To10.hs
tutorials_q/: champagne.q
(+173 files in other folders)
