load("@my_deps//:requirements.bzl", "requirement")
load("@//lib_bzl_utils:python.bzl", "py_binary_")

STATIC_FILES = glob(["static/**/*"])
HTML_FILES = glob(["templates/**/*.html"])

py_binary_(
    name = "main",
    srcs = ["main.py"],
    deps = [
        requirement("dpath"),
        requirement("requests"),
        requirement("flask"),
        requirement("pathos"),
        requirement("typing_extensions"),
    ],
    data = STATIC_FILES + HTML_FILES,
)
