load("@my_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "functools",
    srcs = ["functools.py"],
    deps = [],
)

py_library(
    name = "logging",
    srcs = ["logging.py"],
    deps = [
        requirement("colorama"),
    ],
)
