Name:               hunit-example
Version:            1.0.0
cabal-version:      >= 1.8
build-type:         Simple

Library
  Exposed-Modules:  HUnitExample
  Build-Depends:    base >= 3

Test-Suite test-hunit-example
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  Main-is:          TestEx1To10.hs
